# SDL_gpud

./: CMakeLists.txt  README.md  SDL_gpud.h  build.sh
example/: impl.c  main.c  main.cpp
shaders/: 2d_shape.frag  2d_shape.vert  3d_shape.vert  color.glsl  shape.frag
src/: SDL_gpud_begin.h  SDL_gpud_end.h  SDL_gpud_impl.h  SDL_gpud_shaders.h
